@@ -1,3 +1,8 @@
+2004-08-15  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	PR target/14931
+	* powerpc_darwin_mach_dep.s (_GC_push_regs): Change to new stub style.
+
 2004-08-13  Bryce McKinlay  <mckinlay@redhat.com>
 
 	* configure.ac (gc_cflags): Add -Iinclude.
